--- a/Pages/Consultas/C_Ocupaciones.razor
+++ b/Pages/Consultas/C_Ocupaciones.razor
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in ocupacion.GetList())
+                @foreach (var item in _ocupaciones)
                 {
                     <tr>
                         <td>@item.OcupacionId</td>
@@ -28,6 +28,17 @@
             </tbody>
         </table>
 </EditForm>
+
+@code
+{
+    public Ocupaciones ocupaciones{get; set;} = new Ocupaciones();
+    public List<Ocupaciones> _ocupaciones{get;set;} = new List<Ocupaciones>();
+
+    public void buscar()
+    {
+        _ocupaciones = ocupacion.GetList(o => true);
+    }
+}
 
 
 
