--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -33,7 +33,12 @@
             <NavLink class="nav-link" href="C_Ocupaciones">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta ocupaciones
             </NavLink>
-        </div>             
+        </div>       
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="LoginPersona">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro persona
+            </NavLink>
+        </div>                
     </nav>
 </div>
 
