--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -38,7 +38,22 @@
             <NavLink class="nav-link" href="LoginPersona">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro persona
             </NavLink>
-        </div>                
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_persona">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consolta Personas
+            </NavLink>
+        </div>   
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Prestamos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Prestamos
+            </NavLink>
+        </div>   
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Cprestamos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consolta Prestamos
+            </NavLink>
+        </div>                    
     </nav>
 </div>
 
