--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -53,7 +53,12 @@
             <NavLink class="nav-link" href="Cprestamos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consolta Prestamos
             </NavLink>
-        </div>                    
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pagos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Pagos
+            </NavLink>
+        </div>                          
     </nav>
 </div>
 
