--- a/Pages/Consultas/C_Pagos.razor
+++ b/Pages/Consultas/C_Pagos.razor
@@ -23,8 +23,10 @@
                 {
                     <tr>
                         <td>@item.PagosId</td>
-                        <td>@item.</td>
-
+                        <td>@item.Fecha</td>
+                        <td>@item.PersonaId</td>
+                        <td>@item.Concepto</td>
+                        <td>@item.Monto</td>
                     </tr>
                 }
                 
