--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -41,7 +41,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="C_persona">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consolta Personas
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Personas
             </NavLink>
         </div>   
         <div class="nav-item px-3">
@@ -51,14 +51,29 @@
         </div>   
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Cprestamos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consolta Prestamos
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Prestamos
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="pagos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Pagos
             </NavLink>
-        </div>                          
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_pagos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
+            </NavLink>
+        </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pagosDetalle">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Pagos Detalle
+            </NavLink>
+        </div>   
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_pagosDetalle">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Detalle
+            </NavLink>
+        </div>                                             
     </nav>
 </div>
 
