--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -10,31 +10,19 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
+            <a class="navbar-brand" href="">Registro ocupaciones</a>
             <NavLink class="nav-link" href="ocupacion">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ocupaciones
             </NavLink>
         </div>     
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="C_Ocupaciones">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta ocupaciones
             </NavLink>
         </div>       
         <div class="nav-item px-3">
+            <a class="navbar-brand" href="">Registro Persona</a>
             <NavLink class="nav-link" href="LoginPersona">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro persona
             </NavLink>
@@ -45,6 +33,7 @@
             </NavLink>
         </div>   
         <div class="nav-item px-3">
+            <a class="navbar-brand" href="">Registro Prestamos</a>
             <NavLink class="nav-link" href="Prestamos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Prestamos
             </NavLink>
@@ -55,6 +44,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <a class="navbar-brand" href="">Registro Pagos</a>
             <NavLink class="nav-link" href="pagos">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Pagos
             </NavLink>
