--- a/Pages/Consultas/C_Prestamos.razor
+++ b/Pages/Consultas/C_Prestamos.razor
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in prestamo.GetList())
+                @foreach (var item in prestamo.GetList(o => true))
                 {
                     <tr>
                         <td>@item.PrestamosId</td>
