--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="GestionPrestamosPersonales2023.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+
 
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
@@ -31,6 +33,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+
 
 </body>
 </html>
